# SemanticSimilarityLangchainTexttoSQL

./: .env.example  .gitignore  README.md  pyproject.toml  results.json
semantic_sql/: __init__.py  cli.py  config.py
semantic_sql/agent/: __init__.py  prompt_builder.py  sql_agent.py
semantic_sql/agent/prompts/: templates.py
semantic_sql/benchmark/: dataset_loader.py  evaluator.py  runner.py  self_test.py  strategies.py
semantic_sql/db/: __init__.py  connection.py  executor.py  schema_inspector.py
semantic_sql/evaluation/: __init__.py  ground_truth.py  learning_examples.py  ragas_eval.py
semantic_sql/feedback/: __init__.py  annotation_handler.py  langfuse_client.py  validation.py
semantic_sql/memory/: __init__.py  deduplication.py  example_store.py  token_aware.py
semantic_sql/models/: __init__.py  schemas.py
semantic_sql/pipeline/: __init__.py  feedback_pipeline.py  query_pipeline.py
semantic_sql/scripts/: init_db.py
semantic_sql/utils/: __init__.py  similarity.py  tokens.py
