[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-sql"
version = "0.1.0"
description = "Self-improving Text-to-SQL agent with dynamic few-shot injection via human feedback"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-postgres>=0.0.12",
    "langfuse>=2.0",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.7",
    "rich>=13.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
semantic-sql = "semantic_sql.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
